Refactor file writing to use declared type name